Added Stack Blog

--- a/_posts/2016-11-19-Stack.md
+++ b/_posts/2016-11-19-Stack.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Algorithms, Data Structures and Anxiety"
+title: "The Stack Data Structure"
 date: 2016-11-08
-excerpt: "The guide to important wisdom"
+excerpt: "Introduction to DSA"
 tags: [post, algorithms, ACM, NAU, data structures, python]
 comments: true
 ---
