Fixed config.yml file

--- a/_posts/2016-11-19-Stack.md
+++ b/_posts/2016-11-19-Stack.md
@@ -51,7 +51,7 @@ myStack.pop(2)
 ```
 Will remove the third element (remember indexing starts with 0) Science. 
 
-![alt text](./img/dataStructures/stack.png "Stack")
+![](./img/dataStructures/stack.png "Stack")
 
 
 Now its time to just dive into code and other functions that the stack offers that operate on it.
