Testing projects page on Blog

--- a/_posts/2016-11-25-OS.md
+++ b/_posts/2016-11-25-OS.md
@@ -1,16 +1,13 @@
 ---
 layout: post
-title:  "Moon Jekyll Theme"
+title:  "My Operating System"
 date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
+excerpt: "What it takes to build an operating system."
 project: true
 tag:
-- jekyll 
-- moon
-- blog
-- about
-- theme
+- operating system
+- project
 comments: true
 ---
 
-# Testing
+# Operating System
